# agentic-rag-workflow

./: README.md  app.py  pyproject.toml
config/: settings.py
examples/: test.py
src/embeddings/: embed_data.py
src/generation/: rag.py
src/indexing/: milvus_vdb.py
src/retrieval/: retriever_rerank.py
src/workflows/: agent_workflow.py  events.py
